version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/NASTRAN/GenericCommand.rst.txt
.. vale off



:class:`GenericCommand`
=======================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.NASTRAN.GenericCommand

   Bases: :py:obj:`object`


   
   Generic command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: GenericCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Arguments`
            - Gets the arguments.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.







Property detail
---------------
.. py:property:: Arguments
   :type: Optional[tuple[Any]]

   
   Gets the arguments.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!







.. vale on